--- a/src/main/webapp/scripts/components/navbar/post/PostView.html
+++ b/src/main/webapp/scripts/components/navbar/post/PostView.html
@@ -40,7 +40,7 @@
             </mentio-menu>
             <div>
                 {{ 'post.characters.left' | translate }}
-                <span class="countstatus badge">{{ charCount - status.content.length }}</span>
+                <span class="countstatus badge">{{ calculateRemainingLength() }}</span>
                 <a class="pull-right" target="_blank" href="https://help.github.com/articles/markdown-basics/" translate="post.markdown"></a>
             </div>
         </fieldset>
