Added support for company timeline

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -214,7 +214,7 @@
                                 <span class="glyphicon glyphicon-signal"></span>
                                 <span translate="global.account.topPosters.title"></span>
                             </a>
-                            <a ui-sref="global.company">
+                            <a ui-sref="company">
                                 <span class="glyphicon glyphicon-briefcase"></span>
                                 <span translate="global.topMenu.account.companyTimeline"></span>
                             </a>
