Add ability to search from timeline for groups, users and tags

--- a/src/main/webapp/scripts/components/navbar/SearchView.html
+++ b/src/main/webapp/scripts/components/navbar/SearchView.html
@@ -4,7 +4,7 @@
             {{ match.model.name }}
         </span>
     </div>
-    <div class="category users" ng-if="match.model.login">
+    <div class="category users" ng-if="match.model.username">
         <span class="glyphicon glyphicon-user">
             @{{match.model.username}}
         </span>
@@ -15,3 +15,4 @@
         </span>
     </div>
 </a>
+
