Fix search bar text to clear after a search is performed

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -311,7 +311,7 @@
                            uib-typeahead="state for state in allSearch | filter:$viewValue | limitTo:10"
                            typeahead-on-select="goToPage($item)"
                            typeahead-template-url="/scripts/components/navbar/SearchView.html"
-                           type="text" class="col-span-12"
+                           type="text"
                            autocomplete="off" placeholder="{{ 'global.topMenu.search' | translate }}"
                            typeahead-min-length="1"
                            class="form-control">
