--- a/src/main/webapp/assets/styles/tatami.css
+++ b/src/main/webapp/assets/styles/tatami.css
@@ -629,7 +629,7 @@ margin-bottom: 20px;
 
 .tatams-container {
     min-height: 75px;
-    background-image: url(/assets/images/wallpaper.jpg);
+    background-image: url(/assets/img/wallpaper.jpg);
 }
 
 .tatam-expand-container {
