--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -1,4 +1,4 @@
-<ion-view view-title="">
+<ion-view view-title="{{ 'tab.more' | translate }}">
     <ion-content>
         <ion-list>
             <ion-item class="item-divider item-button-right" translate="more.endpoint.change"></ion-item>
@@ -28,14 +28,17 @@
                 <span class="ion-briefcase calm"></span>&nbsp;
                 <span class="calm" translate="more.company">Company Timeline</span>
             </ion-item>
-            <ion-item class="item-divider" translate="more.language.change"></ion-item>
-            <ion-radio ng-repeat="language in vm.languages"
-                       ng-model="vm.language"
-                       ng-value="language.langKey">
-                {{ language.translateKey | translate }}
-            </ion-radio>
             <ion-item class="item-divider"></ion-item>
-
+            <ion-item ng-click="vm.goToSettings()" class="text-center">
+                <span class="ion-settings"></span>&nbsp;
+                <span translate="more.settings">Settings</span>
+            </ion-item>
+            <ion-item class="item-divider"></ion-item>
+            <ion-item class="text-center">
+                <span class="ion-sad"></span>
+                <span translate="more.blockedusers">Manage your blocked users</span>
+            </ion-item>
+            <ion-item class="item-divider"></ion-item>
             <ion-item ng-click="vm.logout()" class="text-center">
                 <span class="ion-power assertive"></span>&nbsp;
                 <span class="assertive" translate="more.logout">Logout</span>
