Create the state for managing the blocked-users state as a substate of more.

--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -34,9 +34,9 @@
                 <span translate="more.settings">Settings</span>
             </ion-item>
             <ion-item class="item-divider"></ion-item>
-            <ion-item class="text-center">
+            <ion-item class="text-center" ng-click="vm.goToBlockedUsers()">
                 <span class="ion-sad"></span>
-                <span translate="more.blockedusers">Manage your blocked users</span>
+                <span translate="more.blockedusers.manage">Manage your blocked users</span>
             </ion-item>
             <ion-item class="item-divider"></ion-item>
             <ion-item ng-click="vm.logout()" class="text-center">
