Front end for the block feature.

--- a/mobile/www/app/components/home/more/blocked_users/blocked.users.html
+++ b/mobile/www/app/components/home/more/blocked_users/blocked.users.html
@@ -1,9 +1,9 @@
 <ion-view view-title="{{ 'more.blockedusers.manage' | translate }}">
     <ion-content>
-        <ion-list ng-init="getBlockedUsersForUser">
-            <ion-item ng-if="vm.hasBlockedUsers()" ng-repeat="blockeduser in vm.blockedUsers">
-                <span>{{blockeduser.username}}</span>
-            </ion-item>
+        <ion-list ng-init="vm.getBlockedUsersForUser()">
+            <div ng-if="vm.hasBlockedUsers()" ng-repeat="blockeduser in vm.blockedUsers">
+                <tatami-user user="blockeduser"></tatami-user>
+            </div>
             <ion-item ng-if="!vm.hasBlockedUsers()" translate="more.blockedusers.no">No blocked users</ion-item>
         </ion-list>
     </ion-content>
