--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -1,28 +1,9 @@
 <ion-view view-title="{{ 'tab.more' | translate }}">
     <ion-content>
         <ion-list>
-            <ion-item class="item-divider item-button-right" translate="more.endpoint.change"></ion-item>
-            <ion-item ng-show="vm.attempted && !vm.success" translate="more.endpoint.error" class="assertive"></ion-item>
-            <ion-item class="item-input-inset">
-                <label class="item-input-wrapper">
-                    <input type="text"
-                           ng-model="vm.endpoint"
-                           placeholder="{{ 'more.endpoint.title' | translate }}">
-                </label>
-                <button class="button button-small"
-                        ng-class="{ 'button-balanced': vm.attempted && vm.success,
-                                    'button-assertive': vm.attempted && !vm.success }"
-                        ng-disabled="vm.isDefaultEndpoint()"
-                        ng-click="vm.updateEndpoint()">
-                    <span ng-if="vm.attempted"
-                          ng-class="{ 'ion-checkmark-round': vm.success,
-                                      'ion-close-round': !vm.success }"></span>
-                    <span ng-if="!vm.attempted">Submit</span>
-                </button>
-            </ion-item>
-            <ion-item ng-click="vm.useDefaultEndpoint()"
-                      class="text-center"
-                      translate="more.endpoint.default"></ion-item>
+            <div>
+                <tatami-user user="vm.currentUser"></tatami-user>
+            </div>
             <ion-item class="item-divider"></ion-item>
             <ion-item ng-click="vm.goToCompanyTimeline()" class="text-center">
                 <span class="ion-briefcase calm"></span>&nbsp;
