Create reported statuses database, add reported statuses to database

--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -11,13 +11,18 @@
             </ion-item>
             <ion-item class="item-divider"></ion-item>
             <ion-item ng-click="vm.goToSettings()" class="text-center">
-                <span class="ion-settings"></span>&nbsp;
+                <span class="ion-gear-b"></span>&nbsp;
                 <span translate="more.settings">Settings</span>
             </ion-item>
             <ion-item class="item-divider"></ion-item>
             <ion-item class="text-center" ng-click="vm.goToBlockedUsers()">
-                <span class="ion-sad"></span>
+                <span class="ion-minus-circled"></span>
                 <span translate="more.blockedusers.manage">Manage your blocked users</span>
+            </ion-item>
+            <ion-item class="item-divider"></ion-item>
+            <ion-item class="text-center" ng-click="vm.goToReportedStatus()">
+                <span class="ion-alert-circled"></span>
+                <span translate="more.reportedStatus.title">Reported Statuses</span>
             </ion-item>
             <ion-item class="item-divider"></ion-item>
             <ion-item ng-click="vm.logout()" class="text-center">
