--- a/mobile/www/app/components/follow/suggested/suggested.html
+++ b/mobile/www/app/components/follow/suggested/suggested.html
@@ -1,6 +1,6 @@
 <ion-view view-title="{{ 'tab.suggested.who' | translate }}">
     <ion-content>
-        <ion-refresh on-refresh="vm.getNewSuggested()"></ion-refresh>
+        <ion-refresher on-refresh="vm.getNewSuggested()"></ion-refresher>
         <ion-list>
             <div ng-repeat="user in vm.suggested">
                 <tatami-user user="user"></tatami-user>
