--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{ 'tab.more' | translate }}">
-    <ion-content>
+    <ion-content class="tatami-header tatami-footer">
         <ion-list>
             <div>
                 <tatami-user user="vm.currentUser"></tatami-user>
