fixed minor issue with toast when favorite status is selected, add refresh page to blocked users and reported statuses

--- a/mobile/www/app/components/home/more/blocked_users/blocked.users.html
+++ b/mobile/www/app/components/home/more/blocked_users/blocked.users.html
@@ -1,5 +1,6 @@
 <ion-view view-title="{{ 'more.blockedusers.manage' | translate }}">
     <ion-content>
+        <ion-refresher on-refresh="vm.getBlockedUsersForUser()"></ion-refresher>
         <ion-list ng-init="vm.getBlockedUsersForUser()">
             <div ng-if="vm.hasBlockedUsers()" ng-repeat="blockeduser in vm.blockedUsers">
                 <tatami-user user="blockeduser"></tatami-user>
