--- a/mobile/www/app/components/home/more/reportedStatus/reportedStatus.html
+++ b/mobile/www/app/components/home/more/reportedStatus/reportedStatus.html
@@ -1,8 +1,8 @@
 <ion-view view-title="{{ 'more.reportedStatus.title' | translate }}">
     <ion-content class="tatami-header tatami-footer">
+        <ion-refresher on-refresh="vm.getReportedStatuses()"></ion-refresher>
         <ion-list ng-init="vm.getReportedStatuses()">
             <ion-item ng-if="vm.hasReportedStatus()" ng-repeat="status in vm.reportedStatuses" >
-
                 <tatami-status status = "status" current-user = "vm.currentUser" on-delete = "vm.remove(status)"></tatami-status>
                 <div class="row">
                     <div class="col-25 button button-clear ion-checkmark-round" ng-click="vm.approveStatus(status.statusId)"></div>
