fixed tatami server display to now display long text

--- a/mobile/www/app/components/login/server/server.html
+++ b/mobile/www/app/components/login/server/server.html
@@ -4,7 +4,9 @@
             <ion-item class="item-divider item-button-right" translate="server.endpoint.change"></ion-item>
             <ion-item class="item-input-inset">
                 <label class="item-input-wrapper">
-                    <input type="text"
+                    <input
+                        class="item-input-wrapper"
+                        type="text"
                            autocapitalize="off"
                            autocorrect="off"
                            ng-model="vm.endpoint"
